KQXS: README: Big Upgrade
- Add Support APIKey Login for OpenAPI
- Complete Support APIKey
- Set APIKey Default
- Refactor Code
